# brainforge

./: .gitignore  CLAUDE.md  README.md  README_phase2a_v1_backup.md  pyproject.toml
benchmarks/: ablation.py  baseline_mlp.py  brainnet_cifar10.py  compare.py  download_data.py  inhibition_diagnostics.py  plot_results.py  run_full_benchmark.py  run_short_prolog.py
benchmarks/results/: inhibition_diagnostics.md  inhibition_diagnostics_trained.md  inhibition_diagnostics_untrained.md  run_log.txt
benchmarks/results/full_run/: run_log.txt
benchmarks/results/full_run/conv_baseline/: summary.json
benchmarks/results/full_run/conv_cortical_inhib0/: summary.json
benchmarks/results/full_run/conv_cortical_inhib10/: summary.json
benchmarks/results/full_run/conv_cortical_inhib20/: summary.json
benchmarks/results/full_run/conv_cortical_inhib30/: summary.json
benchmarks/results/full_run/cortical_column_mlp/: summary.json
benchmarks/results/full_run/mlp_baseline/: summary.json
benchmarks/results/gpu_speedtest/: summary.json
benchmarks/results/gpu_speedtest/seed_42/: metrics.json
benchmarks/results/learning_check_5ep/: summary.json
benchmarks/results/learning_check_5ep/seed_42/: metrics.json
benchmarks/results/test_conv_subset/: summary.json
benchmarks/results/test_epoch/: summary.json
benchmarks/results/test_epoch/seed_7/: metrics.json
benchmarks/results/test_gpu_speed/: summary.json
brainnet/: __init__.py  conv_backbone.py  conv_column.py  cortical_column.py  inhibitory.py  lateral.py  topoloss.py
docs/: phase2a_decisions.md
tests/: test_brainnet.py
(+59 files in other folders)
